# hexgame

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Version.h.in  clang-format.cmake  cppcheck.cmake  generate  windows.cmake
cmake/: CheckMacHIDAPI.cpp  Findcppcheck.cpp  GetGitRevisionDescription.cmake
cmake/ghost-fake-stl/: alloc.h  hash_map.h  iostream.h  list.h  pair.h  set.h  vector.h
doc/: doxyfile
include/: AIPhase.h  Actor.h  AnimatedMesh.h  Attack.h  AttackPhase.h  BattleMapState.h  CEGUISystem.h  CEGUITextLog.h  CGameEngine.h  CGameState.h  Camera.h  Character.h  CharacterAI.h  CharacterInfoBox.h  Component.h  ConfirmationPrompt.h  Cursor.h  Display.h  Effect.h  EntityManager.h  FBO.h  FacingPhase.h  FileLoader.h  GLOBALS.h  GLText.h  GUISystem.h  HexGame.h  HexGameConfig.h  HexGameEngine.h  HexMap.h  HexTile.h  HexTileMesh.h  HexTileTexture.h  HexUtils.h  IdlePhase.h  Item.h  Lighting.h  LightingSetup.h  LineParser.h  MainGameState.h  (+26 more)
lib/: CMakeLists.txt
lib/Lighting/: CMakeLists.txt  Lighting.cpp  LightingSetup.cpp
lib/Mesh/: CMakeLists.txt  Mesh.cpp
src/: AIPhase.cpp  Actor.cpp  AnimatedMesh.cpp  Attack.cpp  AttackPhase.cpp  CEGUISystem.cpp  CEGUITextLog.cpp  CGameEngine.cpp  CGameState.cpp  Camera.cpp  Character.cpp  CharacterAI.cpp  CharacterInfoBox.cpp  ConfirmationPrompt.cpp  Cursor.cpp  Effect.cpp  FBO.cpp  FacingPhase.cpp  FileLoader.cpp  GLText.cpp  GUISystem.cpp  HexGame.cpp  HexGameEngine.cpp  HexMap.cpp  HexTile.cpp  HexTileMesh.cpp  HexTileTexture.cpp  HexUtils.cpp  IdlePhase.cpp  Item.cpp  LineParser.cpp  MainGameState.cpp  MainMenuState.cpp  MapEditorState.cpp  MovementPhase.cpp  Particle.cpp  ParticleSystem.cpp  PickingFBO.cpp  Pipeline.cpp  PrintfTextLog.cpp  (+17 more)
tests/: CMakeLists.txt  testLighting.cpp  testMesh.cpp
